@@ -16,6 +16,7 @@ NEWS:
 
 
 NEW: [features/improvements]
++Some improvements to the Python autocompletion.
 +Comment/Uncomment are now combined into a single toggle action
  (modified patch from Giuseppe "Cowo" Corbelli).
 +When mixed eol characters are detected a dialog warning of it is now shown,
@@ -23,7 +24,7 @@ NEW: [features/improvements]
  previously did, since this was found to be confusing to many.
 +Add option to enable/disable checking of eol characters.
 +Add menu shortcut for toggle fold.
-+Some improvements to the Python autocompletion.
++Add a verbose debug mode for view stack tracebacks in editra log messages.
 
 BUG FIXES:
 +Fix find options not properly being syncronized between dialog and find bar.
